--- a/src/com/jshooting/forms/AddShootingTrainingDialog.form
+++ b/src/com/jshooting/forms/AddShootingTrainingDialog.form
@@ -218,6 +218,9 @@
       </Properties>
     </Component>
     <Component class="com.toedter.calendar.JDateChooser" name="jDateChooserTrainingDate">
+      <Events>
+        <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="jDateChooserTrainingDatePropertyChange"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonAddTraining">
       <Properties>
