--- a/src/com/jshooting/forms/ShootingTrainingsFilterDialog.form
+++ b/src/com/jshooting/forms/ShootingTrainingsFilterDialog.form
@@ -7,6 +7,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="title" type="java.lang.String" value="&#x424;&#x438;&#x43b;&#x44c;&#x442;&#x440;"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
@@ -35,9 +36,9 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="jPanelSportsmans" min="-2" max="-2" attributes="0"/>
+                      <Component id="jPanelSportsmans" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jPanelPeriod" max="32767" attributes="0"/>
+                      <Component id="jPanelPeriod" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jPanelTrainingsType" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -87,7 +88,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jScrollPane1" max="32767" attributes="0"/>
+                      <Component id="jScrollPane1" pref="287" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Component id="jLabelTeam" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
@@ -164,7 +165,7 @@
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jRadioButtonPlacePeriod" max="32767" attributes="0"/>
-                              <Component id="jRadioButtonDatesPeriod" pref="237" max="32767" attributes="0"/>
+                              <Component id="jRadioButtonDatesPeriod" pref="210" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
@@ -207,7 +208,7 @@
                   <Component id="jRadioButtonPlacePeriod" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jComboBoxPlace" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="56" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
