--- a/src/com/jshooting/forms/ShootingTrainingsFilterDialog.form
+++ b/src/com/jshooting/forms/ShootingTrainingsFilterDialog.form
@@ -253,16 +253,14 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="jComboBoxPlace">
           <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
-              </StringArray>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="placesComboBoxModel" type="code"/>
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBoxPlaceActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
