--- a/reports/combinedReport.jrxml
+++ b/reports/combinedReport.jrxml
@@ -5,6 +5,7 @@
 	<property name="ireport.y" value="0"/>
 	<parameter name="DATE_FROM" class="java.lang.String"/>
 	<parameter name="DATE_TO" class="java.lang.String"/>
+	<parameter name="PLACE_NAME" class="java.lang.String"/>
 	<field name="number" class="java.lang.String"/>
 	<field name="sportsmanName" class="java.lang.String"/>
 	<field name="totalShoots" class="java.lang.String"/>
@@ -61,11 +62,18 @@
 				<textFieldExpression><![CDATA[$P{DATE_FROM}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="b888aab0-e526-4c70-89c8-572e7a588f3c" x="232" y="41" width="100" height="18"/>
+				<reportElement uuid="b888aab0-e526-4c70-89c8-572e7a588f3c" x="232" y="41" width="85" height="18"/>
 				<textElement verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{DATE_TO}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement uuid="3040aca2-e5a7-4e74-af3c-648e64b36d9f" x="317" y="41" width="485" height="18"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{PLACE_NAME}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
