--- a/src/com/jshooting/forms/EditMissMarksDialog.form
+++ b/src/com/jshooting/forms/EditMissMarksDialog.form
@@ -65,6 +65,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x421;&#x442;&#x435;&#x440;&#x435;&#x442;&#x44c; &#x432;&#x441;&#x435;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonClearAllMarksActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
